--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,4 +198,8 @@
     <string name="menu_chat">Chats</string>
     <string name="menu_settings">Settings</string>
 
+    <string name="app_description"> Doctor Yogesh Batra</string>
+    <string name="contact_group"> 0987654321</string>
+    <string name="application_information_group"> Fun and Fine</string>
+
 </resources>
