--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,4 +205,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="confirm_mobile_number">Confirm Mobile Number</string>
 
+    <string name="agora_app_id">76e18be701ef4dbab422eb484e17b54d</string>
+    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
+    <!-- You will need to deploy your own token server for production release -->
+    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
+    <string name="agora_access_token">00676e18be701ef4dbab422eb484e17b54dIABAYfN6ng4jA9EnYxyEXD77zCfUFHHqJdYk0qeW/jeUw+IVUyEh39v0IgBS5bjUQoI0YwQAAQDSPjNjAgDSPjNjAwDSPjNjBADSPjNj</string>
+
 </resources>
